Mon Sep  8 12:25:15 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Guard_T.h:
          Use ACE_UNIMPLEMENTED_FUNC because that maps to deleted
          operations with C++11

Mon Sep  8 12:12:24 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_Log_Msg_Attributes.h:
          Use ACE_UNIMPLEMENTED_FUNC because that maps to deleted
          operations with C++11

        * ace/config-g++-common.h:
          Only define ACE_Proper_Export_Flag and ACE_Proper_Import_Flag
          when they are not defined yet

        * ace/os_include/os_stropts.h:
          Updated fix for clang

        * tests/Compiler_Features_35_Test.cpp:
          Extended this unit test

Fri Sep  5 18:00:25 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_35_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          New C++11 compiler test

Fri Sep  5 13:59:55 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          And also exclude ls as tool

Fri Sep  5 11:25:38 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          ps/gro/bash are in some linux flavors installed under /bin
          and in some /usr/bin

Fri Sep  5 08:11:27 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          Suppress leaks coming from ps/perl/grep/bash, we aren't
          interested in those

Fri Sep  5 07:41:02 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          Improved suppress file for TAO

Fri Sep  5 06:42:24 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          Suppress all leaks in ps/bash/grep

Thu Sep  4 16:41:40 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS3/contrib/john_at_lyris_dot_com/jaws3-cntlC.code:
        * examples/NT_Service/main.cpp: